--- a/style.css
+++ b/style.css
@@ -126,3 +126,57 @@ hr {
 .fa-star.empty {
     color: #AEAEAE;
 }
+
+/* media-queries */
+
+/* mobile-devices */
+
+/* @media only screen and (max-width:688px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player,
+    .blogs {
+        flex-direction: column;
+    }
+
+} */
+
+/* Tablet devices */
+
+@media only screen and (min-width:689px) and (max-width:992px) {
+    .container {
+        width: 100%;
+    }
+
+    .players {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width:688px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player,
+    .blogs,
+    .courses {
+        flex-direction: column;
+    }
+}
